objects/Occupancy_Tab_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Occupancy Tab Setting</label>
    <fields>
        <fullName>Enable_Reset_Deposit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Reset Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Remove_Prospect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Remove Prospect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Reverse_Move_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Reverse Move-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reset_Deposit_User_Names__c</fullName>
        <label>Reset Deposit User Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remove_Prospect_User_Names__c</fullName>
        <label>Remove Prospect User Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Enable_Add_Missing_Resident__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Add Missing Resident</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reverse_Move_Out_User_Names__c</fullName>
        <label>Reverse Move-Out User Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Enable_Add_Temporary_SNF_Stay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Add Temporary SNF Stay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_Missing_Resident_User_Names__c</fullName>
        <label>Add Missing Resident User Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Add_Temporary_SNF_Stay_User_Names__c</fullName>
        <label>Add Temporary SNF Stay User Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Enable_Add_Temporary_Respite_Stay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Add Temporary Respite Stay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_Temporary_Respite_Stay_User_Names__c</fullName>
        <label>Add Temporary Respite Stay User Names</label>
        <type>TextArea</type>
    </fields>
</CustomObject>